[project]
name = "picoenvironmentarchive"
version = "0.1.0"
description = "Backup Pico Environment Archive themes and environment pages"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "drissionpage>=4.1.1.2",
    "beautifulsoup4>=4.13.0",
    "pillow>=12.0.0",
    "requests>=2.32.0",
]
